# YunMin-mamba-v1

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  EXPERIMENTAL_SETUP.md  EXPERIMENT_GUIDE.md  LICENSE  MANIFEST.in  NOTES.md  PRODUCTION_READINESS_REPORT.md  README.md  UBUNTU_DRY_RUN_SUMMARY.md  VALIDATION_SUMMARY.md  batch_test.py  calculate_scan_order.py  check_model_structure.py  demo_full_scale_validation.py  demo_validation.py  extract_hidden_states.py  get_lora_mamba.py  hidden_states.pt  main.py  model.py  notes.md  pretrain.py  pretrain_sdm.py  pyproject.toml  quick_start_ubuntu.sh  quick_test.py  requirements.txt  requirements_ubuntu.txt  research_ablation_study.py  research_evaluate.py  run_correlation_scan.py  run_experiments.py  run_full_experiment.sh  run_tests.sh  scan_order.npy  (+13 more)
.github/workflows/: pytest.yml
configs/: dry_run_config.yaml  finetune_glue.yaml  finetune_sgh_peft.yaml  mamba_130m.yaml  mamba_370m.yaml  mamba_370m_memory_optimized.yaml  model_config.yaml  pretrain_base.yaml  pretrain_sdm.yaml  unified_config.yaml
data/: glue.py  wikitext103.py  wiktext103.py
demo_validation_results/results/: M_CSP_validation.json  M_SDM_validation.json  M_SGH_validation.json  M_base_validation.json  M_challenge_validation.json  M_full_validation.json
docs/: experiment.md  math_spec.md  structure.md
evaluation/: comprehensive_analysis.py
full_scale_demo_results/: full_scale_validation_demo.json
layers/: __init__.py  ia3_layers.py  learned_mask.py  masked_linear.py  variable_scan.py
models/: __init__.py  baseline_ssm.py  csp_permutation.py  sdm_ssm.py  sgh_peft.py  ssm_scan.py
research/: __init__.py  research_ablation_study.py  research_datasets.py  research_evaluate.py
scripts/: analyze_results.py  analyze_sdm.py  check_dependencies.sh  create_challenge_baseline.py  evaluate_glue.py  evaluate_latency.py  generate_final_report.py  monitor_memory.py  profile_memory.py  run_challenge_baseline.py  run_complete_validation.py  run_csp_analysis.py  run_finetuning.py  run_full_pipeline.py  run_full_scale_validation.py  run_sdm_then_sgh.py  run_sgh_proxy.py  run_validation_suite.py  setup_datasets.sh  setup_distributed.sh  validate_all_dependencies.sh  validate_experimental_setup.py
tests/: README.md  __init__.py  batch_test.py  quick_test.py  run_all_tests.py  run_test_suite.py  test_fallback_mamba.py  test_full_experiment.ps1  test_full_experiment.sh  test_lora_params.py  test_metrics_logging.py  test_model_forward.py  test_peft_manager.py  test_pretrain_sdm.py  test_pretrain_sdm_integration.py  test_quick_test.py  test_research_evaluate.py  test_scan_patch.py  test_variable_scan.py
tests/configs/: test_config_tiny.yaml
theory/: convergence_analysis.py
utils/: logger.py  metrics_logger.py  profiling.py  statistical_testing.py
yunmin/: main.py  pyproject.toml
